--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -3,6 +3,7 @@
   "presets": {
     "Default": {
       "logo_width": 90,
+      "logo_margin": 4,
       "color_schemes": {
         "scheme-1": {
           "settings": {
